--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="img/f.jfif">
 
     <!-- Libraries Stylesheet -->
@@ -53,11 +54,11 @@
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
+                    
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
+                   
                 </div>
             </div>
         </div>
@@ -318,7 +319,7 @@
                         <div class="service-icon">
                             <i class="fas fa-signal text-white"></i>
                         </div>
-                        <h4 class="mb-3">Premium Signals</h4>
+                        <h4 class="mb-3">Premium Forex Signals</h4>
                         <p class="m-0">Experience the power of Premium Forex Signals—analyzed, timely, and proven profitable 98.99% of the time. Join our community  today!</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -330,8 +331,8 @@
                         <div class="service-icon">
                             <i class="fas fa-chart-bar text-white"></i>
                         </div>
-                        <h4 class="mb-3">Binary Training</h4>
-                        <p class="m-0">Dive deep into Binary Training: learn integration, terms, and compare effectiveness with Forex. Gain expert advice, guidance, and market navigation skills.</p>
+                        <h4 class="mb-3">Binary Training Tools</h4>
+                        <p class="m-0">Dive deep into Binary Training Tools: Get access to the best trading tools, <a href="https://www.mastersetanalysistool.site/login.php">The Master set analysis tool</a> Click Link .</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -478,6 +479,7 @@
                                         <option selected>Select A Package</option>
                                         <option value="1">Binary Trading</option>
                                         <option value="1">Binary Bots</option>
+                                        <option value="1">Premium Forex Signals</option>
                                         <option value="2">Forex  Trading Mentorship</option>
                                         <option value="3">Crpto Consultancy</option>
                                     </select>
@@ -886,10 +888,9 @@
                                 <p class="mb-0">+254759777222</p>
                             </div>
                             <div class="d-flex mt-4">
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
