--- a/service.html
+++ b/service.html
@@ -19,6 +19,7 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="img/f.jfif">
 
     <!-- Libraries Stylesheet -->
@@ -53,11 +54,11 @@
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
+                    
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
+                   
                 </div>
             </div>
         </div>
@@ -104,86 +105,88 @@
 
 
 
- <!-- Service Start -->
- <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-    <div class="container py-5">
-        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Our Services</h5>
-            <h1 class="mb-0">Choose From Our Tailor-made Packages For Your Trading Success</h1>
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon">
-                        <i class="fas fa-graduation-cap text-white"></i>
-                    </div>
-                    <h4 class="mb-3">Forex Trading Mentorship</h4>
-                    <p class="m-0">Transform into market virtuosos with our Forex Mentorship, cultivating god-like skills for profitable trading. Elevate expertise, seize opportunities, reap rewards.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
-                </div>
+ 
+    <!-- Service Start -->
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+                <h5 class="fw-bold text-primary text-uppercase">Our Services</h5>
+                <h1 class="mb-0">Choose From Our Tailor-made Packages For Your Trading Success</h1>
             </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon">
-                        <i class="fab fa-bitcoin text-white"></i>
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                            <i class="fas fa-graduation-cap text-white"></i>
+                        </div>
+                        <h4 class="mb-3">Forex Trading Mentorship</h4>
+                        <p class="m-0">Transform into market virtuosos with our Forex Mentorship, cultivating god-like skills for profitable trading. Elevate expertise, seize opportunities, reap rewards.</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
-                    <h4 class="mb-3">Crpto Consultancy</h4>
-                    <p class="m-0">Ascend to mastery with our Crypto Consultancy. Identify lucrative projects, execute savvy trades, seize bull runs, and stay updated on market dynamics.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon">
-                        <i class="fas fa-robot text-white"></i>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                            <i class="fab fa-bitcoin text-white"></i>
+                        </div>
+                        <h4 class="mb-3">Crpto Consultancy</h4>
+                        <p class="m-0">Ascend to mastery with our Crypto Consultancy. Identify lucrative projects, execute savvy trades, seize bull runs, and stay updated on market dynamics.</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
-                    <h4 class="mb-3">Binary Trading Bots</h4>
-                    <p class="m-0">Unlock success with our Binary Trading Bots, programmed with winning strategies for a consistent 95% win rate. Experience reliability and profitability.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon">
-                        <i class="fas fa-signal text-white"></i>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                            <i class="fas fa-robot text-white"></i>
+                        </div>
+                        <h4 class="mb-3">Binary Trading Bots</h4>
+                        <p class="m-0">Unlock success with our Binary Trading Bots, programmed with winning strategies for a consistent 95% win rate. Experience reliability and profitability.</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
-                    <h4 class="mb-3">Premium Signals</h4>
-                    <p class="m-0">Experience the power of Premium Forex Signals—analyzed, timely, and proven profitable 98.99% of the time. Join our community  today!</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon">
-                        <i class="fas fa-chart-bar text-white"></i>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                            <i class="fas fa-signal text-white"></i>
+                        </div>
+                        <h4 class="mb-3">Premium Forex Signals</h4>
+                        <p class="m-0">Experience the power of Premium Forex Signals—analyzed, timely, and proven profitable 98.99% of the time. Join our community  today!</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
-                    <h4 class="mb-3">Binary Training</h4>
-                    <p class="m-0">Dive deep into Binary Training: learn integration, terms, and compare effectiveness with Forex. Gain expert advice, guidance, and market navigation skills.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
-                    <h3 class="text-white mb-3">Call Us To Start Today</h3>
-                    <p class="text-white mb-3">Our doors are always open. Reach us anytime via chat, socials, or calls. Your convenience is our priority. We're here for you</p>
-                    <h2 class="text-white mb-0">+254759777222
-                    </h2>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                            <i class="fas fa-chart-bar text-white"></i>
+                        </div>
+                        <h4 class="mb-3">Binary Training Tools</h4>
+                        <p class="m-0">Dive deep into Binary Training Tools: Get access to the best trading tools, <a href="https://www.mastersetanalysistool.site/login.php">The Master set analysis tool</a> Click Link .</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                    <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
+                        <h3 class="text-white mb-3">Call Us To Start Today</h3>
+                        <p class="text-white mb-3">Our doors are always open. Reach us anytime via chat, socials, or calls. Your convenience is our priority. We're here for you</p>
+                        <h2 class="text-white mb-0">+254759777222
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Service End -->
+    <!-- Service End -->
+
 
 
 
@@ -507,10 +510,9 @@
                                 <p class="mb-0">+254759777222</p>
                             </div>
                             <div class="d-flex mt-4">
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
