--- a/about.html
+++ b/about.html
@@ -138,6 +138,7 @@
                         </div>
                     </div>
                     <a href="#" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Call Back</a>
+                    <a href="https://wa.me/254759777222" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s" style="background-color: #075E54;"><i class="fab fa-whatsapp fw-normal"></i>Text Us On Whatsapp</a>
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -149,69 +150,70 @@
     </div>
     <!-- About End -->
 
-    <!-- Team Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h5 class="fw-bold text-primary text-uppercase">Team Members</h5>
-                <h1 class="mb-0">Professional Traders & Mentors Ready to Help Your Grow</h1>
+   
+ <!-- Team Start -->
+ <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+            <h5 class="fw-bold text-primary text-uppercase">Team Members</h5>
+            <h1 class="mb-0">Professional Traders & Mentors Ready to Help Your Grow</h1>
+        </div>
+        <div class="row g-5">
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
+                <div class="team-item bg-light rounded overflow-hidden">
+                    <div class="team-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100" src="img/f2.jpg" alt="">
+                        <div class="team-social">
+                            <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
+                        </div>
+                    </div>
+                    <div class="text-center py-4">
+                        <h4 class="text-primary">Trevor Dyan &reg;</h4>
+                        <p class="text-uppercase m-0">C.E.O & TRADER</p>
+                    </div>
+                </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                    <div class="team-item bg-light rounded overflow-hidden">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/f2.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h4 class="text-primary">Trevor Dyan &reg;</h4>
-                            <p class="text-uppercase m-0">C.E.O & TRADER</p>
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
+                <div class="team-item bg-light rounded overflow-hidden">
+                    <div class="team-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100" src="img/t1.jpeg" alt="">
+                        <div class="team-social">
+                            <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-                    <div class="team-item bg-light rounded overflow-hidden">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/t1.jpeg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h4 class="text-primary">Trevor Dyan &reg;</h4>
-                            <p class="text-uppercase m-0">C.O.T & TRADER</p>
-                        </div>
+                    <div class="text-center py-4">
+                        <h4 class="text-primary">Trevor Dyan &reg;</h4>
+                        <p class="text-uppercase m-0">C.O.T & TRADER</p>
                     </div>
                 </div>
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-                    <div class="team-item bg-light rounded overflow-hidden">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/t2.jpeg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
-                            </div>
+            </div>
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
+                <div class="team-item bg-light rounded overflow-hidden">
+                    <div class="team-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100" src="img/t2.jpeg" alt="">
+                        <div class="team-social">
+                            <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                         </div>
-                        <div class="text-center py-4">
-                            <h4 class="text-primary">Trevor Dyan &reg;</h4>
-                            <p class="text-uppercase m-0">C.F.O & TRADER</p>
-                        </div>
+                    </div>
+                    <div class="text-center py-4">
+                        <h4 class="text-primary">Trevor Dyan &reg;</h4>
+                        <p class="text-uppercase m-0">C.F.O & TRADER</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Team End -->
+</div>
+<!-- Team End -->
 
 
     <!-- Vendor Start -->
