--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                         </div>
                     </div>
                     <a href="#contact" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Call Back</a>
+                    <a href="https://wa.me/254759777222" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s" style="background-color: #075E54;"><i class="fab fa-whatsapp fw-normal"></i>Text Us On Whatsapp</a>
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -466,6 +467,15 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Call to ask any question</h5>
+                            <h4 class="text-primary mb-0">+254759777222</h4>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mt-2 wow zoomIn" data-wow-delay="0.6s">
+                        <div class=" d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px; background-color: #075E54;">
+                            <a href="https://wa.me/254759777222"><i class="fab fa-whatsapp text-white"></i></a>
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="mb-2">Click Icon To Text Us On Whatsapp</h5>
                             <h4 class="text-primary mb-0">+254759777222</h4>
                         </div>
                     </div>
@@ -784,7 +794,7 @@
                         <img class="img-fluid w-100" src="img/f2.jpg" alt="">
                         <div class="team-social">
                             <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
                             <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
                             <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                         </div>
@@ -801,7 +811,7 @@
                         <img class="img-fluid w-100" src="img/t1.jpeg" alt="">
                         <div class="team-social">
                             <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
                             <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
                             <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                         </div>
@@ -818,7 +828,7 @@
                         <img class="img-fluid w-100" src="img/t2.jpeg" alt="">
                         <div class="team-social">
                             <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
                             <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
                             <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                         </div>
@@ -895,7 +905,7 @@
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="https://wa.me/254759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://wa.me/0759777222"><i class="fab fa-whatsapp fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square me-2" href="https://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
