--- a/price.html
+++ b/price.html
@@ -219,6 +219,15 @@
                         <h4 class="text-primary mb-0">+254759777222</h4>
                     </div>
                 </div>
+                <div class="d-flex align-items-center mt-2 wow zoomIn" data-wow-delay="0.6s">
+                    <div class=" d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px; background-color: #075E54;">
+                        <a href="https://wa.me/254759777222"><i class="fab fa-whatsapp text-white"></i></a>
+                    </div>
+                    <div class="ps-4">
+                        <h5 class="mb-2">Click Icon To Text Us On Whatsapp</h5>
+                        <h4 class="text-primary mb-0">+254759777222</h4>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-5">
                 <div class="bg-primary rounded h-100 d-flex align-items-center p-5 wow zoomIn" data-wow-delay="0.9s">
